# TeebsonBot

./: .env.template  .gitignore  README.md  api.py  config.template.py  googleauth.py  requirements.txt  start.py
projects/api/: Dockerfile  Makefile  README.md  entrypoint.sh  nginx.conf  prod.Dockerfile  pyproject.toml
projects/api/nginx/: README.md  nginx.Dockerfile  nginx.conf
projects/api/src/: api.py
projects/api/tests/: api_test.py  conftest.py
projects/bot/: Dockerfile  Makefile  pyproject.toml
projects/bot/src/: start.py
shared/db/: README.md  pyproject.toml
shared/db/src/: db.py
shared/googleauth/: README.md  pyproject.toml
shared/googleauth/src/: googleauth.py
shared/googleauth/tests/: googleauth_test.py
tests/: api_test.py  conftest.py  googleauth_test.py
