[tool.poetry]
name = "db"
version = "0.1.1"
description = "flask extension for a sqlalchemy engine connection"
authors = ["keeb12 <kalebkoebelgd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
SQLAlchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
