[tool.poetry]
name = "googleauth"
version = "0.1.0"
description = "manage credentials for google authentication integration"
authors = ["keeb12 <kalebkoebelgd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
termcolor = "^2.4.0"
asyncio = "^3.4.3"
SQLAlchemy = "^2.0.23"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
